@@ -1,5 +1,7 @@
 03 June 2008
 
+* -s to specify session name now supports fnmatch(3) wildcards; if multiple
+  sessions are found, or if no -s is specified, the most newly created is used.
 * If no command is specified, assume new-session. As a byproduct, clean up 
   command default values into seperate init functions.
 * kill-server command.
@@ -374,4 +376,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.100 2008-06-03 05:35:50 nicm Exp $
+$Id: CHANGES,v 1.101 2008-06-03 05:47:09 nicm Exp $
